# zoomcamp-mlops-2025

./: .gitignore  README.md  pyproject.toml  test.ipynb
01-intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb  hpo.py  register_model.py  train.py
03-orchestration/: homework.ipynb  pyproject.toml
03-orchestration/airflow/: Dockerfile  docker-compose.yaml  requirements.txt  useful_commands.sh
03-orchestration/airflow/config/: airflow.cfg
03-orchestration/airflow/dags/: train_regressor_nyc_taxi.py
04-deployment/: homework.ipynb  homework.py
05-monitoring/: baseline_model_nyc_taxi_data.ipynb  homework.ipynb
06-best-practices/: batch.py  homework.ipynb
06-best-practices/tests/: docker-compose.yml  integration_test.py  test_batch.py
