[project]
name = "zoomcamp-mlops-2025"
version = "0.1.0"
description = "MLOps Zoomcamp 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setuptools>=80.8.0",
]
